# e-ink-pi-dash

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  gmail_client.rs  lib.rs  main.rs  shopify.rs  shopify_client.rs  simulator.rs  ui.rs  wavshare.rs
