[package]
name = "e-ink-pi-dash"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
simulator = ["dep:embedded-graphics-simulator"]
wavshare = ["dep:epd-waveshare", "linux-embedded-hal"]
#vendored-ssl = ['openssl/vendored']

[dependencies]
embedded-graphics = "0.7.1"
dotenvy = "0.15"
embedded-text = "0.5"

embedded-graphics-simulator = { version = "0.4.1", optional = true}
epd-waveshare = { version = "0.5", optional = true }
linux-embedded-hal = { version = "0.3", optional = true }

#reqwest = "0.11"
serde = "1"
serde_json = "1"


